[package]
name = "btree_error"
version = "0.1.0"
authors = ["James Spears <james.w.spears@gmail.com>"]
edition = "2018"
autotests = false
license = "MIT OR Apache-2.0"
description = "To avoid duplication, all bforest libs use the same error crate."
homepage = "https://github.com/jameone/btree_error"
repository = "https://github.com/jameone/btree_error"
keywords = ["bforest", "error"]
categories = ["data-structures", "no-std"]
readme = "README.md"

[[test]]
name = "integration"
path = "tests/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
cbor = ["try_encoding_from/cbor"]
json = ["try_encoding_from/json"]
yaml = ["try_encoding_from/yaml"]
fmt = []

[dependencies]
serde = { version = "1.0", features = ["derive"], default-features = false, optional = true }
try_encoding_from = { version = "0.1", default-features = false, optional = true }

[dev-dependencies]
criterion = "0.3.3"

[[bench]]
name = "benchmark"
path = "benches/lib.rs"
harness = false

[profile.release]
# or "z"
opt-level = "z"